--- a/app/src/main/res/layout/row_product.xml
+++ b/app/src/main/res/layout/row_product.xml
@@ -8,8 +8,8 @@
 
     <ImageView
         android:id="@+id/imageView_thumb"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="300px"
+        android:layout_height="300px"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -17,7 +17,7 @@
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
-        android:id="@+id/textView_name"
+        android:id="@+id/product_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -27,7 +27,7 @@
         app:layout_constraintTop_toTopOf="@+id/imageView_thumb" />
 
     <TextView
-        android:id="@+id/textView_summary"
+        android:id="@+id/product_price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -36,5 +36,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/imageView_thumb"
-        app:layout_constraintTop_toBottomOf="@+id/textView_name" />
+        app:layout_constraintTop_toBottomOf="@+id/product_name" />
+
+    <View
+        android:id="@+id/mypage_dividing_line1"
+        android:layout_width="match_parent"
+        android:layout_height="2.3dp"
+        android:background="#D1D1D1"
+        app:layout_constraintTop_toBottomOf="@+id/imageView_thumb"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
