--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -16,14 +16,15 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent">
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginTop="5dp">
 
             <ImageView
                 android:id="@+id/main_logo"
-                android:layout_width="200px"
-                android:layout_height="200px"
+                android:layout_width="50dp"
+                android:layout_height="47dp"
                 android:src="@drawable/logo"
-                android:layout_marginLeft="160px"
+                android:layout_marginLeft="90dp"
                 android:layout_marginTop="17px"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent"/>
@@ -38,7 +39,8 @@
                 android:textColor="@color/black"
                 app:layout_constraintLeft_toRightOf="@id/main_logo"
                 app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginTop="65px" />
+                android:layout_marginTop="15dp"
+                android:layout_marginLeft="5dp"/>
 
         </LinearLayout>
 
@@ -47,7 +49,8 @@
             android:layout_width="match_parent"
             android:layout_height="2.3dp"
             android:background="#434343"
-            app:layout_constraintTop_toBottomOf="@+id/main_logo_layout"/>
+            app:layout_constraintTop_toBottomOf="@+id/main_logo_layout"
+            android:layout_marginTop="7dp"/>
 
         <TextView
             android:id="@+id/recommend_text"
