--- a/app/src/main/res/layout/fragment_menu_search1.xml
+++ b/app/src/main/res/layout/fragment_menu_search1.xml
@@ -30,7 +30,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@id/text1"
-            android:text="  무엇을 찾고 있나요 ?"
+            android:hint="  무엇을 찾고 있나요 ?"
             android:drawableLeft="@drawable/ic_baseline_search_24"
             android:layout_marginTop="50px"
             android:paddingTop="30px"
@@ -40,11 +40,67 @@
             android:layout_marginRight="50px"
             android:background="@drawable/edittext_border"/>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/edit_text"
+            android:id="@+id/linear"
+            >
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerview2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#f5f5f5"
+                android:padding="10dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/search_text"
+                tools:listitem="@layout/menu_item_search"/>
+
+
+
+        </LinearLayout>
+
+
+
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2.3dp"
+            android:layout_marginLeft="70px"
+            android:layout_marginRight="70px"
+            android:layout_marginTop="20px"
+            android:id="@+id/search_line1"
+            app:layout_constraintTop_toBottomOf="@id/linear"
+            android:background="@color/black"
+            />
+
+
+
+
+
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerview"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:background="#f5f5f5"
+            android:padding="10dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/search_text"
+            tools:listitem="@layout/recyccler_search"/>
+
         <TextView
+            android:id="@+id/search_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/edit_text"
+            app:layout_constraintTop_toBottomOf="@id/search_line1"
             android:text="제품 찾아보기"
             android:textStyle="normal"
             android:textSize="20sp"
@@ -63,22 +119,10 @@
             android:textStyle="normal"
             android:textColor="#5F5F5F"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/edit_text" />
+            app:layout_constraintTop_toBottomOf="@id/search_line1" />
 
-        <include
-            android:id="@+id/product_list"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/entire"
-            android:layout_marginTop="35px"
-            layout="@layout/fragment_search_product_list" />
 
-        <include
-            android:id="@+id/home_ad_banner"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/product_list"
-            layout="@layout/fragment_ad_banner"/>
+
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
