--- a/app/src/main/res/layout/fragment_recommend_proudct_list.xml
+++ b/app/src/main/res/layout/fragment_recommend_proudct_list.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="30px">
 
         <ImageView
-            android:id="@+id/imageView1"
+            android:id="@+id/recommend_image1"
             android:layout_width="400px"
             android:layout_height="300px"
             android:layout_gravity="left"
@@ -28,7 +28,7 @@
             android:layout_weight="1" />
 
         <ImageView
-            android:id="@+id/imageView2"
+            android:id="@+id/recommend_image2"
             android:layout_width="400px"
             android:layout_height="300px"
             android:layout_gravity="right"
