--- a/app/src/main/res/layout/productdetail1.xml
+++ b/app/src/main/res/layout/productdetail1.xml
@@ -25,17 +25,34 @@
                             android:textSize="25dp"
                             android:textColor="@color/black"
                             android:paddingTop="50px"
-                            android:paddingLeft="70px"
+                            android:paddingLeft="70px" />
 
-                            />
-                        <Button
-                            android:layout_width="wrap_content"
+                        <LinearLayout
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                                android:id="@+id/btn1"
-                            android:text="미리보기"
-                            app:layout_constraintLeft_toRightOf="@id/product_detail"
-                                />
+                            android:orientation="horizontal"
+                            android:layout_marginLeft="105dp"
+                            android:layout_marginTop="15dp"
+                            android:layout_marginBottom="15dp">
 
+                                <Button
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:id="@+id/preview_button"
+                                    android:text="미리보기"
+                                    app:layout_constraintLeft_toLeftOf="parent"
+                                    app:layout_constraintRight_toRightOf="parent"
+                                   />
+
+                                <Button
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:id="@+id/basket_add_button"
+                                    android:text="장바구니 추가"
+                                    app:layout_constraintLeft_toRightOf="@id/preview_button"
+                                    android:layout_marginLeft="15dp"/>
+
+                        </LinearLayout>
 
 
                         <View
