--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -123,12 +123,17 @@
                 android:layout_marginTop="20dp"
                 layout="@layout/fragment_hotdeal_product_list" />
 
-            <include
-                android:id="@+id/home_ad_banner"
+
+            <WebView android:id="@+id/webView"
+                android:layout_gravity="center"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="28dp"
+                android:layout_marginRight="28dp"
                 app:layout_constraintTop_toBottomOf="@+id/hotdeal_product_list"
-                layout="@layout/fragment_ad_banner"/>
+                app:layout_constraintLeft_toLeftOf="parent"/>
+
 
 
 
