--- a/app/src/main/res/layout/fragment_recommend_proudct_list.xml
+++ b/app/src/main/res/layout/fragment_recommend_proudct_list.xml
@@ -6,35 +6,42 @@
     tools:context=".View.MainActivity"
     android:orientation="vertical">
 
+<!--        <androidx.recyclerview.widget.RecyclerView-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--                tools:listitem="@layout/hotdeal_layout2"-->
+<!--            android:id="@+id/recommend_recycler1"-->
+<!--                />-->
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="30px">
 
-        <ImageView
-            android:id="@+id/recommend_image1"
-            android:layout_width="400px"
-            android:layout_height="300px"
-            android:layout_gravity="left"
-            android:layout_marginLeft="70px"
-            android:background="@drawable/product_border"
-            android:src="@drawable/image_bath" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="30px">
 
-        <View
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_weight="1" />
+                <ImageView
+                    android:id="@+id/recommend_image1"
+                    android:layout_width="400px"
+                    android:layout_height="300px"
+                    android:layout_gravity="left"
+                    android:layout_marginLeft="70px"
+                    android:background="@drawable/product_border"
+                    android:src="@drawable/image_bath" />
 
-        <ImageView
-            android:id="@+id/recommend_image2"
-            android:layout_width="400px"
-            android:layout_height="300px"
-            android:layout_gravity="right"
-            android:layout_marginRight="70px"
-            android:background="@drawable/product_border"
-            android:src="@drawable/image_living" />
-    </LinearLayout>
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_weight="1" />
+
+                <ImageView
+                    android:id="@+id/recommend_image2"
+                    android:layout_width="400px"
+                    android:layout_height="300px"
+                    android:layout_gravity="right"
+                    android:layout_marginRight="70px"
+                    android:background="@drawable/product_border"
+                    android:src="@drawable/image_living" />
+        </LinearLayout>
 
 </LinearLayout>
