DB Column(details, url2, url3, url4) Add and Connection ProductDetail Ui complete

--- a/app/src/main/res/layout/productdetail1.xml
+++ b/app/src/main/res/layout/productdetail1.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/black"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".View.ProductDetail">
 
@@ -23,9 +24,21 @@
                             android:text="제품 상세 정보"
                             android:textStyle="bold"
                             android:textSize="25dp"
-                            android:textColor="@color/black"
-                            android:paddingTop="50px"
+                            android:textColor="@color/white"
+                            android:paddingTop="60px"
                             android:paddingLeft="70px" />
+
+                        <View
+                            android:layout_width="match_parent"
+                            android:layout_height="2.3dp"
+                            android:layout_marginLeft="70px"
+                            android:layout_marginRight="70px"
+                            android:layout_marginTop="50px"
+                            android:id="@+id/product_detail_line0"
+                            app:layout_constraintTop_toBottomOf="@id/product_detail"
+                            android:background="@color/white"
+
+                            />
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -33,7 +46,8 @@
                             android:orientation="horizontal"
                             android:layout_marginLeft="105dp"
                             android:layout_marginTop="15dp"
-                            android:layout_marginBottom="15dp">
+                            android:layout_marginBottom="15dp"
+                            android:id="@+id/button_layout">
 
                                 <Button
                                     android:layout_width="wrap_content"
@@ -53,20 +67,17 @@
                                     android:layout_marginLeft="15dp"/>
 
                         </LinearLayout>
-
-
-                        <View
+                        <ImageView
                             android:layout_width="match_parent"
-                            android:layout_height="2.3dp"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/item_detail_image1"
+                            android:src="@drawable/ic_launcher_background"
+                            android:layout_marginTop="30px"
                             android:layout_marginLeft="70px"
                             android:layout_marginRight="70px"
-                            android:layout_marginTop="15px"
+                            app:layout_constraintTop_toBottomOf="@id/button_layout"
+                            />
 
-                            android:id="@+id/product_detail_line1"
-                            app:layout_constraintTop_toBottomOf="@id/product_detail"
-                            android:background="@color/black"
-
-                                />
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -75,8 +86,10 @@
                             android:paddingTop = "5dp"
                             android:textSize="30dp"
                             android:textStyle="bold"
-                            android:textColor="@color/green"
-                            android:gravity="center"
+                            android:text="가구 브랜드"
+                            android:textColor="#6E6EFF"
+                            android:layout_marginLeft="130dp"
+                            android:layout_marginTop="20dp"
 
                             />
 
@@ -85,19 +98,95 @@
                             android:layout_height="wrap_content"
                             android:id="@+id/item_detail_text2"
                             app:layout_constraintTop_toBottomOf="@id/product_detail"
-                            android:paddingTop = "5dp"
-                            android:textSize="30dp"
-                            android:textStyle="bold"
-                            android:textColor="@color/blue"
-                            android:gravity="center"
+                            android:layout_marginTop="10dp"
+                            android:textSize="23dp"
+                            android:textStyle="normal"
+                            android:text="제품 이름"
+                            android:textColor="@color/white"
+                            android:layout_marginLeft="147dp"
 
                             />
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                                android:orientation="horizontal"
+                            android:layout_marginLeft="147dp"
+                            android:layout_marginTop="10dp">
+
+
+                        <TextView
+                            android:id="@+id/item_detail_text4"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            app:layout_constraintTop_toBottomOf="@+id/item_detail_text2"
+                            android:textStyle="normal"
+                            android:textColor="@color/white"
+                            android:textSize="23dp"
+                            android:text="\"
+
+                            />
+                        <TextView
+                            android:id="@+id/item_detail_text3"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            app:layout_constraintTop_toBottomOf="@+id/item_detail_text2"
+                            app:layout_constraintLeft_toRightOf="@+id/item_detail_text4"
+                            android:textStyle="normal"
+                            android:textColor="@color/white"
+                            android:textSize="23dp"
+                            android:text="가격"
+                            android:layout_marginLeft="20px"
+
+                            />
+                </LinearLayout>
+
                         <View
                             android:id="@+id/product_detail_line2"
                             android:layout_width="match_parent"
                             android:layout_height="2.3dp"
-                            android:background="@color/black"
-                            android:layout_marginTop="30px"
+                            android:background="@color/white"
+                            android:layout_marginTop="30dp"
+                            android:layout_marginLeft="70px"
+                            android:layout_marginRight="70px"
+                            app:layout_constraintTop_toBottomOf="@+id/product_detail1"/>
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:orientation="vertical">
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text='"'
+                                    android:textColor="@color/white"
+                                    android:layout_marginLeft="40dp"
+                                    android:layout_marginTop="17dp"
+                                    android:textSize="30dp"/>
+                                <TextView
+                                    android:id="@+id/details"
+                                    android:layout_width="280dp"
+                                    android:layout_height="wrap_content"
+                                    android:text='상세설명'
+                                    android:textColor="@color/white"
+                                    android:layout_marginLeft="70dp"
+                                    android:layout_marginTop="5dp"
+                                    android:textSize="20dp"/>
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text='"'
+                                    android:textColor="@color/white"
+                                    android:layout_marginLeft="370dp"
+                                    android:layout_marginTop="17dp"
+                                    android:textSize="30dp"/>
+
+                        </LinearLayout>
+
+                        <View
+                            android:id="@+id/product_detail_line3"
+                            android:layout_width="match_parent"
+                            android:layout_height="2.3dp"
+                            android:background="@color/white"
                             android:layout_marginLeft="70px"
                             android:layout_marginRight="70px"
                             app:layout_constraintTop_toBottomOf="@+id/product_detail1"/>
@@ -105,9 +194,11 @@
                         <ImageView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:id="@+id/item_detail_image1"
+                            android:id="@+id/item_detail_image2"
                             android:src="@drawable/ic_launcher_background"
                             android:layout_marginTop="30px"
+                            android:layout_marginLeft="70px"
+                            android:layout_marginRight="70px"
                             app:layout_constraintTop_toBottomOf="@id/item_detail_text1"
                             />
 
@@ -117,76 +208,23 @@
                             android:layout_marginTop="30px"
                             android:layout_marginLeft="70px"
                             android:layout_marginRight="70px"
-                            android:id="@+id/product_detail_line3"
+                            android:id="@+id/product_detail_line4"
 
-                            android:background="@color/black"
+                            android:background="@color/white"
                             app:layout_constraintTop_toBottomOf="@id/item_detail_image1"
                             />
-                        <TextView
-                            android:id="@+id/item_detail_text3"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            app:layout_constraintTop_toBottomOf="@id/product_detail_line3"
-                            android:textStyle="bold"
-                            android:textColor="@color/red"
-                            android:textSize="30dp"
-                            android:layout_gravity="left"
-                            android:layout_marginTop="30px"
-                            android:layout_marginLeft="30px"
 
-                                />
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            app:layout_constraintTop_toBottomOf="@id/item_detail_text3"
-                            android:id="@+id/item_detail_text4"
-                            android:textStyle="bold"
-                            android:textColor="@color/black"
-                            android:layout_marginLeft="30px"
-                            android:textSize="20dp"
-                            android:layout_gravity="left"
-                                />
-
-                        <View
-                            android:layout_width="match_parent"
-                            android:layout_height="2.3dp"
-                            android:id="@+id/product_detail_line4"
-                            app:layout_constraintTop_toBottomOf="@id/item_detail_text4"
-                            android:layout_marginTop="30px"
-                            android:layout_marginLeft="70px"
-                            android:layout_marginRight="70px"
-                                android:background="@color/black"
-                                />
-
-                        <ImageView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/item_detail_image2"
-                            android:layout_marginTop="30px"
-                            android:src="@drawable/ic_launcher_background"
-                            app:layout_constraintTop_toBottomOf="@id/product_detail_line4"
-                                />
-
-                        <View
-                            android:layout_width="match_parent"
-                            android:layout_height="2.3dp"
-                            android:id="@+id/product_detail_line5"
-                            app:layout_constraintTop_toBottomOf="@id/item_detail_image2"
-                            android:layout_marginTop="30px"
-                            android:layout_marginLeft="70px"
-                            android:layout_marginRight="70px"
-                            android:background="@color/black"
-                            />
 
                         <ImageView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:id="@+id/item_detail_image3"
-                            android:src="@drawable/ic_launcher_background"
                             android:layout_marginTop="30px"
-                            app:layout_constraintTop_toBottomOf="@id/product_detail_line5"
-                            />
+                            android:layout_marginLeft="70px"
+                            android:layout_marginRight="70px"
+                            android:src="@drawable/ic_launcher_background"
+                            app:layout_constraintTop_toBottomOf="@id/product_detail_line3"
+                                />
 
 
 
