--- a/app/src/main/res/layout/productdetail1.xml
+++ b/app/src/main/res/layout/productdetail1.xml
@@ -54,6 +54,7 @@
                                     android:layout_height="wrap_content"
                                     android:id="@+id/preview_button"
                                     android:text="미리보기"
+                                    android:textStyle="bold"
                                     app:layout_constraintLeft_toLeftOf="parent"
                                     app:layout_constraintRight_toRightOf="parent"
                                    />
@@ -63,6 +64,7 @@
                                     android:layout_height="wrap_content"
                                     android:id="@+id/basket_add_button"
                                     android:text="장바구니 추가"
+                                    android:textStyle="bold"
                                     app:layout_constraintLeft_toRightOf="@id/preview_button"
                                     android:layout_marginLeft="15dp"/>
 
