--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -73,24 +73,50 @@
                 android:layout_marginTop="27dp"
                 android:layout_marginLeft="27dp"/>
 
-            <include
-                android:id="@+id/recommend_product_list"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:orientation="horizontal"
                 app:layout_constraintTop_toBottomOf="@+id/recommend_text"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                android:layout_marginTop="20dp"
-                layout="@layout/fragment_recommend_proudct_list"
-                />
+                android:id="@+id/recycler_linear"
+                android:layout_marginTop="15dp"
+                >
+<!--상단 금주 추천 가구 리사이클러뷰-->
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/hotdeal1_recycler"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="#f5f5f5"
+                    android:padding="10dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    tools:listitem="@layout/hotdeal_layout1"
+                    />
+
+            </LinearLayout>
+
+<!--            <include-->
+<!--                android:id="@+id/recommend_product_list"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                app:layout_constraintTop_toBottomOf="@+id/recommend_text"-->
+<!--                app:layout_constraintLeft_toLeftOf="parent"-->
+<!--                app:layout_constraintRight_toRightOf="parent"-->
+<!--                android:layout_marginTop="20dp"-->
+<!--                layout="@layout/fragment_recommend_proudct_list"-->
+<!--                />-->
 
             <View
                 android:id="@+id/home_dividing_line2"
                 android:layout_width="match_parent"
                 android:layout_height="2.3dp"
                 android:background="#FF9999"
-                app:layout_constraintTop_toBottomOf="@+id/recommend_product_list"
+                app:layout_constraintTop_toBottomOf="@+id/recycler_linear"
                 android:layout_marginTop="30dp" />
+<!--                app:layout_constraintTop_toBottomOf="@+id/recommend_product_list"-->
+
 
             <TextView
                 android:id="@+id/hotdeal_text"
@@ -115,13 +141,37 @@
                 android:layout_marginTop="27dp"
                 android:layout_marginLeft="10dp"/>
 
-            <include
-                android:id="@+id/hotdeal_product_list"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@+id/hotdeal_text"
-                android:layout_marginTop="20dp"
-                layout="@layout/fragment_hotdeal_product_list" />
+                android:orientation="horizontal"
+                app:layout_constraintTop_toBottomOf="@+id/hotdeal_icon"
+                android:id="@+id/recycler_linear2"
+                android:layout_marginTop="15dp"
+                >
+<!--하단 핫딜 리사이클러 뷰-->
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/hotdeal2_recycler2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="#f5f5f5"
+                    android:padding="10dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    tools:listitem="@layout/hotdeal_layout2"
+                    />
+
+            </LinearLayout>
+
+<!--            <include-->
+<!--                android:id="@+id/hotdeal_product_list"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                app:layout_constraintTop_toBottomOf="@+id/hotdeal_text"-->
+<!--                android:layout_marginTop="20dp"-->
+<!--                layout="@layout/fragment_hotdeal_product_list" />-->
 
 
             <WebView android:id="@+id/webView"
@@ -131,7 +181,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginLeft="28dp"
                 android:layout_marginRight="28dp"
-                app:layout_constraintTop_toBottomOf="@+id/hotdeal_product_list"
+                app:layout_constraintTop_toBottomOf="@+id/recycler_linear2"
                 app:layout_constraintLeft_toLeftOf="parent"/>
 
 
