--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -80,13 +80,14 @@
                 app:layout_constraintTop_toBottomOf="@+id/recommend_text"
                 android:id="@+id/recycler_linear"
                 android:layout_marginTop="15dp"
+                android:background="@drawable/recommend_border"
                 >
 <!--상단 금주 추천 가구 리사이클러뷰-->
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/hotdeal1_recycler"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="#f5f5f5"
+
                     android:padding="10dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -148,13 +149,13 @@
                 app:layout_constraintTop_toBottomOf="@+id/hotdeal_icon"
                 android:id="@+id/recycler_linear2"
                 android:layout_marginTop="15dp"
+                android:background="@drawable/hotdeal_product_border"
                 >
 <!--하단 핫딜 리사이클러 뷰-->
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/hotdeal2_recycler2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="#f5f5f5"
                     android:padding="10dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
