--- a/app/src/main/res/layout/hotdeal_layout1.xml
+++ b/app/src/main/res/layout/hotdeal_layout1.xml
@@ -4,11 +4,12 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginStart="15dp"
-    android:layout_marginEnd="15dp">
+    android:layout_marginEnd="15dp"
+    android:background="@drawable/hotdeal_product_border">
 
     <ImageView
         android:id="@+id/hotdeal1_image"
-        android:layout_width="150dp"
+        android:layout_width="128dp"
         android:layout_height="80dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
