--- a/app/src/main/res/drawable/hotdeal_product_border.xml
+++ b/app/src/main/res/drawable/hotdeal_product_border.xml
@@ -3,12 +3,12 @@
     <solid
         android:color="#FFF" />
     <padding
-        android:left="60px"
-        android:top="20px"
-        android:right="60px"
-        android:bottom="20px" />
+        android:left="10dp"
+        android:top="10dp"
+        android:right="10dp"
+        android:bottom="10dp" />
     <corners
-        android:radius="30px" />
+        android:radius="10dp" />
     <stroke
         android:color="#FF7A7A"
         android:width="2dp"
