--- a/app/src/main/res/layout/custom_dialog.xml
+++ b/app/src/main/res/layout/custom_dialog.xml
@@ -9,7 +9,8 @@
         android:layout_width="300dp"
         android:layout_height="380dp"
         android:layout_gravity="center"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="@drawable/dialog_border">
 
         <TextView
             android:id="@+id/main_label"
@@ -42,7 +43,7 @@
                 android:layout_marginLeft="68dp"
                 android:gravity="center"
                 android:padding="10dp"
-                android:background="@color/white"
+                android:background="#00000000"
                 android:text="확인"
                 android:textStyle="bold"
                 android:textColor="@color/black"
@@ -57,7 +58,7 @@
                 android:padding="10dp"
                 android:text="취소"
                 android:textStyle="bold"
-                android:background="@color/white"
+                android:background="#00000000"
                 android:textColor="#FF5675"
                 android:textAllCaps="false"
                 android:textSize="19dp" />
