--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -72,6 +72,15 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 android:layout_marginTop="27dp"
                 android:layout_marginLeft="27dp"/>
+            <ImageView
+                android:id="@+id/recommend_icon"
+                android:layout_width="40dp"
+                android:layout_height="37dp"
+                android:src="@drawable/muffin124"
+                app:layout_constraintTop_toBottomOf="@id/home_dividing_line1"
+                app:layout_constraintLeft_toRightOf="@id/recommend_text"
+                android:layout_marginTop="20dp"
+                android:layout_marginLeft="1dp"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -80,14 +89,12 @@
                 app:layout_constraintTop_toBottomOf="@+id/recommend_text"
                 android:id="@+id/recycler_linear"
                 android:layout_marginTop="15dp"
-                android:background="@drawable/recommend_border"
                 >
 <!--상단 금주 추천 가구 리사이클러뷰-->
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/hotdeal1_recycler"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-
                     android:padding="10dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -149,7 +156,6 @@
                 app:layout_constraintTop_toBottomOf="@+id/hotdeal_icon"
                 android:id="@+id/recycler_linear2"
                 android:layout_marginTop="15dp"
-                android:background="@drawable/hotdeal_product_border"
                 >
 <!--하단 핫딜 리사이클러 뷰-->
                 <androidx.recyclerview.widget.RecyclerView
@@ -180,8 +186,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:layout_marginLeft="28dp"
-                android:layout_marginRight="28dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
                 app:layout_constraintTop_toBottomOf="@+id/recycler_linear2"
                 app:layout_constraintLeft_toLeftOf="parent"/>
 
