--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -100,7 +100,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    tools:listitem="@layout/hotdeal_layout1"
+                    tools:listitem="@layout/recycle_recommend_product"
                     />
 
             </LinearLayout>
@@ -167,7 +167,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    tools:listitem="@layout/hotdeal_layout2"
+                    tools:listitem="@layout/recycle_hotdeal_product"
                     />
 
             </LinearLayout>
